Ressources TP6-20240406/tp6-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tp6-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: web-tp6.info
    http:
      paths:
      - path: /
        backend:
          serviceName: tp6-web
          servicePort: 8080
      - path: /v2/*
        backend:
          serviceName: tp6-web2
          servicePort: 8080
